scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/ok/multimapaccess.yf
---
name: complex
graphs:
  start:
    # jsonobj :: Object
    - type: JsonStringToObjectNode
      jsonString: "somejsonstringobject"
      jsonObject: "jsonobj"

    # jsonobj :: List<A>
    # item :: A
    - type: EchoNode
      put: item
      value: "{{jsonobj}}[0]"

    # item :: Map<String, A>
    - type: TwoInputsNode
      input1: "{{item}@ok}"
      input2: "{{item}@id}.png"

